--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "framer-motion": "^12.6.2",
     "js-cookie": "^3.0.5",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
